--- a/templates/index.html
+++ b/templates/index.html
@@ -47,12 +47,19 @@
 
         <div class="hero-buttons">
           <a href="#" class="btn-primary">Order Now <i class="fas fa-cookie-bite"></i></a>
-          <a href="#" class="btn-secondary">View All Products ></a>
+          <a href="#" class="btn-secondary">View All Products <span>></span></a>
         </div>
       </div>
 
       <div class="hero-image">
         <img src="../assets/img/hero-img.png" alt="Rajasthani Woman Eating Snack">
+      </div>
+    </section>
+
+    <section class="popular-section">
+      <div class="popular-headings">
+        <h2>CUSTOMER FAVORITES</h2>
+        <img src="" alt="Heading-underline">
       </div>
     </section>
   </main>
