--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,10 @@
 
     <section class="popular-section">
       <div class="popular-headings">
-        <h2>CUSTOMER FAVORITES</h2>
+        <h3>CUSTOMER FAVORITES</h3>
         <img src="" alt="Heading-underline">
+
+        <h1>POPULAR PRODUCTS</h1>
       </div>
     </section>
   </main>
