--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../static/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href='https://cdn.boxicons.com' rel='stylesheet'>
 </head>
 
 <body>
@@ -47,7 +48,7 @@
 
         <div class="hero-buttons">
           <a href="#" class="btn-primary">Order Now <i class="fas fa-cookie-bite"></i></a>
-          <a href="#" class="btn-secondary">View All Products <span>></span></a>
+          <a href="#" class="btn-secondary">View All Products<span><i class="fa-solid fa-greater-than"></i></span></a> 
         </div>
       </div>
 
