--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
 
         <div class="hero-buttons">
           <a href="#" class="btn-primary">Order Now <i class="fas fa-cookie-bite"></i></a>
-          <a href="#" class="btn-secondary">View All Products<span><i class="fa-solid fa-greater-than"></i></span></a> 
+          <a href="#" class="btn-secondary">View All Products<span><i class="fa-solid fa-greater-than"></i></span></a>
         </div>
       </div>
 
@@ -70,9 +70,27 @@
     </section>
 
     <section class="about-section">
-      <div class="about-container">
-        
+      <div class="about-content">
+        <h3>BARI FOODS LEGACY</h3>
+        <h1>Our Royal Heritage</h1>
+        <p>For over four generations, <span class="highlight">Bari Foods</span> has been the custodian of authentic
+          Rajasthani culinary traditions, inspired by the timeless artistry of blue pottery and the royal kitchens of
+          maharajas.</p>
+        <p>Rooted in passion, we curate unforgettable dining experiences and offer exceptional services, blending
+          culinary artistry with warm hospitality.</p>
+
+        <div class="tags">
+          <span>Royal Recipes</span>
+          <span>Pure Ingredients</span>
+          <span>Artisan Crafted</span>
+        </div>
+
       </div>
+
+      <div class="heritage-image">
+        <img src="../assets/img/history-img.png" alt="Rajasthani Food">
+      </div>
+
     </section>
   </main>
 </body>
