Changes in Services

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
 
     <nav>
       <ul class="nav-links">
-        <li><a href="#h.html">Home</a></li>
-        <li><a href="#">Products</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="products.html">Products</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
       </ul>
@@ -73,10 +73,12 @@
       <div class="about-content">
         <h3>BARI FOODS LEGACY</h3>
         <h1>Our Royal Heritage</h1>
-        <p>For over four generations, <span class="highlight">Bari Foods</span> has been the custodian of authentic
+        <p class="main-sub-heading">For over four generations, <span class="highlight">Bari Foods</span> has been the
+          custodian of authentic
           Rajasthani culinary traditions, inspired by the timeless artistry of blue pottery and the royal kitchens of
           maharajas.</p>
-        <p>Rooted in passion, we curate unforgettable dining experiences and offer exceptional services, blending
+        <p class="history-sub-heading">Rooted in passion, we curate unforgettable dining experiences and offer
+          exceptional services, blending
           culinary artistry with warm hospitality.</p>
 
         <div class="tags">
@@ -92,6 +94,76 @@
       </div>
 
     </section>
+
+    <section class="services-section">
+      <div class="services-header">
+        <div class="header-content">
+          <div class="heading-mascot">
+            <img src="../assets/img/char4.png" alt="Rajasthani Mascot" class="mascot-left">
+            <h3>OUR STORY & SERVICES</h3>
+            <img src="../assets/img/mascot-right.png" alt="Rajasthani Mascot" class="mascot-right">
+          </div>
+          <h1>Savor the Essence of Rajasthani Heritage</h1>
+          <p>Rooted in tradition, Bari Foods crafts timeless snacking experiences by blending authentic Rajasthani
+            flavors with a commitment to excellence, passed down over generations.</p>
+        </div>
+
+      </div>
+
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="service-icon">
+            <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M12 2C13.1 2 14 2.9 14 4C14 5.1 13.1 6 12 6C10.9 6 10 5.1 10 4C10 2.9 10.9 2 12 2ZM21 9V7L15 6.5V7.5C15 8.3 14.3 9 13.5 9S12 8.3 12 7.5V6.5L6 7V9C6 10.7 7.3 12 9 12H15C16.7 12 18 10.7 18 9ZM9 16V22H15V16C15 14.3 13.7 13 12 13S9 14.3 9 16Z"
+                fill="#d4ac77" />
+            </svg>
+          </div>
+          <h3>CATERING</h3>
+          <p>Serve authentic Rajasthani snacks at your special events</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M12 2C6.48 2 2 6.48 2 12S6.48 22 12 22 22 17.52 22 12 17.52 2 12 2ZM13 17H11V15H13V17ZM13 13H11V7H13V13Z"
+                fill="#d4ac77" />
+              <path d="M15 11L17 9L15 7V8H13V10H15V11Z" fill="#d4ac77" />
+            </svg>
+          </div>
+          <h3>FAST DELIVERY</h3>
+          <p>Quick delivery of fresh, flavorful snacks to your door</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M7 18C5.9 18 5 18.9 5 20S5.9 22 7 22 9 21.1 9 20 8.1 18 7 18ZM1 2V4H3L6.6 11.59L5.25 14.04C5.09 14.32 5 14.65 5 15C5 16.1 5.9 17 7 17H19V15H7.42C7.28 15 7.17 14.89 7.17 14.75L7.2 14.63L8.1 13H15.55C16.3 13 16.96 12.59 17.3 11.97L20.88 5H5.21L4.27 3H1V2ZM17 18C15.9 18 15 18.9 15 20S15.9 22 17 22 19 21.1 19 20 18.1 18 17 18Z"
+                fill="#d4ac77" />
+              <path d="M20 2L18 4L20 6V5H22V3H20V2Z" fill="#d4ac77" />
+            </svg>
+          </div>
+          <h3>ONLINE ORDERING</h3>
+          <p>Explore menu & order with ease using our Online Ordering</p>
+        </div>
+
+        <div class="service-card">
+          <div class="service-icon">
+            <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M12 2L13.09 8.26L20 7L18.74 13.09L22 14L13.09 21.74L14 15L7 16.26L8.26 10.91L2 10L10.91 2.26L10 7L17 5.74L12 2Z"
+                fill="#d4ac77" />
+              <path d="M12 8C10.9 8 10 8.9 10 10S10.9 12 12 12S14 11.1 14 10S13.1 8 12 8Z" fill="#d4ac77" />
+            </svg>
+          </div>
+          <h3>GIFT PACKS</h3>
+          <p>Gift curated Rajasthani snack boxes for any occasion</p>
+        </div>
+      </div>
+    </section>
+
   </main>
 </body>
 
