--- a/templates/products.html
+++ b/templates/products.html
@@ -15,7 +15,7 @@
 
     <nav>
       <ul class="nav-links">
-        <li><a href="#h.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
