2nd last tweak Home

--- a/templates/products.html
+++ b/templates/products.html
@@ -23,16 +23,17 @@
 
     <nav>
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a href="#hero">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
     <div class="icons">
-      <i class="fas fa-shopping-cart"></i>
-      <i class="fas fa-user-circle"></i>
+      <i class="fas fa-shopping-cart cart-icon"></i>
+      <i class="fas fa-user-circle user-icon"></i>
     </div>
   </header>
 
